--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <li class="nav-item">
                         <a class="nav-link active" href="/">TG</a>
                     </li>
-                    <li class="nav-item">
+<!--                     <li class="nav-item">
                         <a class="nav-link " href="./mt.html">meituan</a>
                     </li>
                     <li class="nav-item">
@@ -49,7 +49,7 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./about.html">About</a>
-                    </li>
+                    </li> -->
                 </ul>
             </div>
         </div>
